fix(build): carry the JDK flags on every JVM, not just the packaged launcher (#256)
* fix(build): carry the JDK flags on every JVM, not just the packaged launcher (#231)

`--sun-misc-unsafe-memory-access=allow` and `--enable-native-access=ALL-UNNAMED` were added only by native-packager's `bashScriptExtraDefines`, so they reached `bin/ccas` and nothing else. On JDK 26 the first flag flips from `warn` to `deny` and the denial lands in class-init (`LazyVals` → `izumi.reflect` → `ZLayer`), so the packaged app would keep working while `sbt test` and every IDE run died before reaching `main()`.

The flags now have one home per launch path: `bashScriptExtraDefines` for the packaged launcher, `.jvmopts` for anything the `sbt` script starts, and `Test / fork` plus `Test / javaOptions` for the test JVM. Forking is what covers the IDE case — `.bsp/sbt.json` starts the BSP server as a direct `java -cp sbt-launch.jar` invocation, so it reads neither `.jvmopts` nor the launcher's own JDK workaround, and with `fork` unset that JVM is where Metals and IntelliJ run the suite. Only the launcher keeps the runtime version probe, since only a packaged binary can meet a JDK that neither `.sdkmanrc` nor CI pins; the other two take the documented floor of JDK 23+.

Forking also ends the pgjdbc deregistration README documented under troubleshooting, so that entry is gone: a fresh JVM per run cannot accumulate it. `TestJvmFlags` pins the flags the test JVM was started with and the contents of `.jvmopts`; the rationale, the measurements and the paths still uncovered are in ADR 0018.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* docs: stop hard-wrapping prose, and say so in the standard

One paragraph is now one line across every tracked markdown file — the ADRs, `CLAUDE.md`, `README.md`, `docs/architecture.md`, `docs/documentation-standard.md` and the two skill files. A fixed column bought nothing: editors and GitHub wrap for display, while every edit to a wrapped par